--- a/proj1.2.html
+++ b/proj1.2.html
@@ -21,7 +21,7 @@
 </header>
 <nav>
     <a href="#" class="menu-btn" >Home</a>
-    <a href="#" class="menu-btn" >Men</a>
+    <a href="#" class="menu-btn" >Menu</a>
     <a href="#" class="menu-btn" >Women</a>
     <a href="#" class="menu-btn" >Kids</a>
     <a href="#" class="menu-btn" >On sale</a>
