--- a/proj1.2.html
+++ b/proj1.2.html
@@ -22,7 +22,7 @@
 <nav>
     <a href="#" class="menu-btn" >Home</a>
     <a href="#" class="menu-btn" >Menu</a>
-    <a href="#" class="menu-btn" >Women</a>
+    <a href="#" class="menu-btn" >Men</a>
     <a href="#" class="menu-btn" >Kids</a>
     <a href="#" class="menu-btn" >On sale</a>
 </nav>
